fixes to GHA workflows

--- a/.github/workflows/publish-jlab-aiinfn.yaml
+++ b/.github/workflows/publish-jlab-aiinfn.yaml
@@ -14,8 +14,13 @@ jobs:
         include:
           - contextdir: docker/ai_infn/jlab/
             imagename: jlab-ai-infn:head
+            baseimagename: harbor.cloud.infn.it/datacloud-templates/jlab-base:2.0.0
+            baseimagecontext: docker/singlenode/jlab-base
+
           - contextdir: docker/ai_infn/jhub/
             imagename: jhub-ai-infn:head
+            baseimagename: ""
+            baseimagecontext: ""
 
     steps:
       - name: Checkout repository
@@ -24,18 +29,19 @@ jobs:
       - name: Log in to GHCR
         run: echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-      - name: Build base Docker image
+      - name: Build base image ${{ matrix.baseimagename }} from ${{ matrix.baseimagecontext }}
+        if: ${{ matrix.baseimagename != '' && matrix.baseimagename != null }}
         run: |
-          docker build -t harbor.cloud.infn.it/datacloud-templates/jlab-base:2.0.0 docker/singlenode/jlab-base
+          docker build -t ${{ matrix.baseimagename }} ${{ matrix.baseimagecontext }}
 
-      - name: Build custom Docker image
+      - name: Build image ${{ matrix.imagename }} frin ${{ matrix.contextdir }}
         run: |
-          IMAGE_NAME=ghcr.io/${{ github.repository }}/{{ matrix.imagename }}
-          docker build -t $IMAGE_NAME {{ matrix.contextdir }}
+          IMAGE_NAME=ghcr.io/${{ github.repository }}/${{ matrix.imagename }}
+          docker build -t $IMAGE_NAME ${{ matrix.contextdir }}
 
-      - name: Push Docker image to GHCR
+      - name: Push image ${{ matrix.imagename }} to GHCR
         run: |
-          IMAGE_NAME=ghcr.io/${{ github.repository }}/{{ matrix.imagename }}
+          IMAGE_NAME=ghcr.io/${{ github.repository }}/${{ matrix.imagename }}
           docker push $IMAGE_NAME
 
 
