--- a/docker/ai_infn/tabbyml/Dockerfile
+++ b/docker/ai_infn/tabbyml/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.13-slim
 
 RUN mkdir -p /aiinfn/.tabby && cd /aiinfn && \
     useradd -md /aiinfn aiinfn
-    wget https://github.com/TabbyML/tabby/releases/download/v0.32.0/tabby_x86_64-manylinux_2_28.tar.gz && \
+    curl -LO tabby_x86_64-manylinux_2_28.tar.gz https://github.com/TabbyML/tabby/releases/download/v0.32.0/tabby_x86_64-manylinux_2_28.tar.gz && \
     tar xfvz tabby_x86_64-manylinux_2_28.tar.gz && \
     ls 
 
