python-slim to python

--- a/docker/ai_infn/tabbyml/Dockerfile
+++ b/docker/ai_infn/tabbyml/Dockerfile
@@ -1,9 +1,9 @@
 # Image name
-FROM python:3.13-slim
+FROM python:3.13
 
 RUN mkdir -p /aiinfn/.tabby && cd /aiinfn && \
     useradd -md /aiinfn aiinfn
-    curl -LO tabby_x86_64-manylinux_2_28.tar.gz https://github.com/TabbyML/tabby/releases/download/v0.32.0/tabby_x86_64-manylinux_2_28.tar.gz && \
+    wget https://github.com/TabbyML/tabby/releases/download/v0.32.0/tabby_x86_64-manylinux_2_28.tar.gz && \
     tar xfvz tabby_x86_64-manylinux_2_28.tar.gz && \
     ls 
 
