--- a/docker/ai_infn/tabbyml/Dockerfile
+++ b/docker/ai_infn/tabbyml/Dockerfile
@@ -1,5 +1,7 @@
 # Image name
-FROM python:3.13
+FROM python:3.13-slim
+
+RUN apt-get update && apt-get install -y wget && apt-get clean
 
 RUN mkdir -p /aiinfn/.tabby && cd /aiinfn && \
     useradd -md /aiinfn aiinfn
