fixed stupid typo

--- a/docker/ai_infn/tabbyml/Dockerfile
+++ b/docker/ai_infn/tabbyml/Dockerfile
@@ -1,10 +1,8 @@
 # Image name
 FROM python:3.13-slim
 
-RUN apt-get update && apt-get install -y wget && apt-get clean
-
 RUN mkdir -p /aiinfn/.tabby && cd /aiinfn && \
-    useradd -md /aiinfn aiinfn
+    useradd -md /aiinfn aiinfn && \
     wget https://github.com/TabbyML/tabby/releases/download/v0.32.0/tabby_x86_64-manylinux_2_28.tar.gz && \
     tar xfvz tabby_x86_64-manylinux_2_28.tar.gz && \
     ls 
