--- a/docker/ai_infn/tabbyml/Dockerfile
+++ b/docker/ai_infn/tabbyml/Dockerfile
@@ -7,6 +7,8 @@ RUN mkdir -p /aiinfn/.tabby && cd /aiinfn && \
     useradd -md /aiinfn aiinfn && \
     wget https://github.com/TabbyML/tabby/releases/download/v0.32.0/tabby_x86_64-manylinux_2_28.tar.gz && \
     tar xfvz tabby_x86_64-manylinux_2_28.tar.gz && \
+    cp tabby_x86_64-manylinux_2_28/tabby ./ && \
+    rm -rf tabby_x86_64-manylinux_2_28 tabby_x86_64-manylinux_2_28.tar.gz && \
     ls 
 
 COPY ./init_tabbyml_users.py /aiinfn/
