fixed db location

--- a/docker/ai_infn/tabbyml/Dockerfile
+++ b/docker/ai_infn/tabbyml/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.13-slim
 
 RUN apt-get update && apt-get install -y wget && apt-get clean
 
-RUN mkdir -p /aiinfn/.tabby && cd /aiinfn && \
+RUN mkdir -p /aiinfn/.tabby/ee && cd /aiinfn && \
     useradd -md /aiinfn aiinfn && \
     chown -R aiinfn /aiinfn && \
     wget https://github.com/TabbyML/tabby/releases/download/v0.31.2/tabby_x86_64-manylinux_2_28.tar.gz && \
@@ -16,7 +16,7 @@ COPY ./init_tabbyml_users.py /aiinfn/
 COPY ./entrypoint.sh /aiinfn/
 RUN chmod +x /aiinfn/entrypoint.sh
 COPY ./config.toml /aiinfn/.tabby/
-COPY ./db.sqlite /aiinfn/.tabby/
+COPY ./db.sqlite /aiinfn/.tabby/ee/
 
 WORKDIR /aiinfn
 USER aiinfn
