fixed ownership db

--- a/docker/ai_infn/tabbyml/Dockerfile
+++ b/docker/ai_infn/tabbyml/Dockerfile
@@ -14,9 +14,10 @@ RUN mkdir -p /aiinfn/.tabby/ee && cd /aiinfn && \
 
 COPY ./init_tabbyml_users.py /aiinfn/
 COPY ./entrypoint.sh /aiinfn/
-RUN chmod +x /aiinfn/entrypoint.sh
 COPY ./config.toml /aiinfn/.tabby/
 COPY ./db.sqlite /aiinfn/.tabby/ee/
+
+RUN chmod +x /aiinfn/entrypoint.sh && chown aiinfn /aiinfn/.tabby/ee
 
 WORKDIR /aiinfn
 USER aiinfn
